# intel-18a-llambo

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_observations.csv  sample_transcript_q1_2026.txt
data/interim/: enriched_monthly_features.csv  source_hashes.csv
data/processed/: enriched_monthly_panel.csv
data/raw/: intel_18a_academic_signals.csv  intel_18a_milestones.csv  intel_cfo_signals.csv  intel_quarterly_financial_signals.csv  source_manifest.csv
docs/: README.md  api-reference.md  api_reference.md  architecture.md  cli-usage.md  configuration.md  data_ingestion_guide.md  data_provenance.md  evaluation.md  getting-started.md  glossary.md  model_guide.md  modules.md  troubleshooting.md  workflow.md
outputs/: forecast.csv  forecast_inline.csv
outputs/audit/: audit_dashboard.html  audit_summary.md  trace_matrix.csv
outputs/quality/: backtest_predictions.csv  critical_assessment.md  metrics_summary.csv
outputs/quality_enriched/: ablation_comparison.csv  backtest_predictions.csv  critical_assessment_enriched.md  metrics_summary.csv
outputs/quality_enriched_cfo_academic/: ablation_comparison.csv  backtest_predictions.csv  critical_assessment_enriched_cfo_academic.md  critical_assessment_hardened.md  metrics_summary.csv
outputs/quality_enriched_rerun/: ablation_comparison.csv  backtest_predictions.csv  critical_assessment_enriched_rerun.md  metrics_summary.csv
outputs/quality_hardened/: ablation_comparison.csv  backtest_predictions.csv  critical_assessment_hardened.md  metrics_summary.csv
scripts/ingest/: fetch_sources.py  (+1 more)
(+13 files in other folders)
